# linux-systems-catalog

./: .clangd  .gitignore  README.md  run_build.sh
include/: p01_ring_buffer.h  p02_inode_cache.h  p07_gpio_irq_mask.h  p08_mmio_rw.h  p09_sysfs_parser.h  p11_timer_wheel.h  p14_uevent_filter.h  p15_cgroup_counter.h  p17_ioctl_dispatch.h  p18_dma_scatter.h  p20_watchdog.h  p24_bootarg_parse.h  p25_log_circ.h  p26_pid_lookup.h  p28_signal_bitmask.h  p29_sysctl_node.h  p30_oom_score.h  p31_packed_sensor.h  p32_endian_conv.h  p36_hex_dump.h  p37_argv_parse.h  p38_env_lookup.h  p41_workqueue.h  p42_refcount.h  p44_fsm_usb.h  p45_mempool.h  p50_snap_health.h
solutions/: .clangd  CMakeLists.txt  README.md
solutions/include/: p01_ring_buffer.h  p02_inode_cache.h  p03_slab_allocator.h  p04_wait_queue.h  p05_kfifo.h  p06_device_registry.h  p10_proc_reader.h  p12_snap_version.h  p13_deb_parser.h  p16_netlink_ring.h  p19_power_state.h  p21_mmap_region.h  p22_devtree_prop.h  p23_firmware_crc.h  p27_mount_parser.h  p33_crc32.h  p34_bitfield_reg.h  p35_run_length.h  p39_lockfree_stack.h  p40_spinlock_sim.h  p43_fsm_uart.h  p46_buddy_alloc.h  p47_rb_tree_light.h  p48_hash_lru.h  p49_cpu_affinity_map.h
solutions/src/: p01_ring_buffer.c  p02_inode_cache.c  p03_slab_allocator.c  p04_wait_queue.c  p05_kfifo.c  p06_device_registry.c  p07_gpio_irq_mask.c  p11_timer_wheel.c  p14_uevent_filter.c  p16_netlink_ring.c  p25_log_circ.c  p26_pid_lookup.c  p27_mount_parser.c  p28_signal_bitmask.c  p31_packed_sensor.c  p32_endian_conv.c  p36_hex_dump.c  p37_argv_parse.c  p39_lockfree_stack.c  p40_spinlock_sim.c  p44_fsm_usb.c  p46_buddy_alloc.c  p50_snap_health.c
solutions/tests/: test_p01_ring_buffer.cpp  test_p02_inode_cache.cpp  test_p03_slab_allocator.cpp  test_p05_kfifo.cpp  test_p06_device_registry.cpp  test_p07_gpio_irq_mask.cpp  test_p10_proc_reader.cpp  test_p12_snap_version.cpp  test_p14_uevent_filter.cpp  test_p15_cgroup_counter.cpp  test_p17_ioctl_dispatch.cpp  test_p19_power_state.cpp  test_p20_watchdog.cpp  test_p21_mmap_region.cpp  test_p22_devtree_prop.cpp  test_p23_firmware_crc.cpp  test_p24_bootarg_parse.cpp  test_p25_log_circ.cpp  test_p26_pid_lookup.cpp  test_p28_signal_bitmask.cpp  test_p29_sysctl_node.cpp  test_p30_oom_score.cpp  test_p32_endian_conv.cpp  test_p35_run_length.cpp  test_p40_spinlock_sim.cpp  test_p41_workqueue.cpp  test_p42_refcount.cpp  test_p43_fsm_uart.cpp  test_p44_fsm_usb.cpp  test_p48_hash_lru.cpp  test_p49_cpu_affinity_map.cpp
src/: p01_ring_buffer.c  p02_inode_cache.c  p03_slab_allocator.c  p05_kfifo.c  p08_mmio_rw.c  p09_sysfs_parser.c  p10_proc_reader.c  p12_snap_version.c  p13_deb_parser.c  p15_cgroup_counter.c  p17_ioctl_dispatch.c  p18_dma_scatter.c  p19_power_state.c  p20_watchdog.c  p21_mmap_region.c  p22_devtree_prop.c  p23_firmware_crc.c  p24_bootarg_parse.c  p29_sysctl_node.c  p30_oom_score.c  p33_crc32.c  p34_bitfield_reg.c  p35_run_length.c  p38_env_lookup.c  p41_workqueue.c  p42_refcount.c  p43_fsm_uart.c  p45_mempool.c  p47_rb_tree_light.c  p48_hash_lru.c  p49_cpu_affinity_map.c
tests/: test_p04_wait_queue.cpp  test_p08_mmio_rw.cpp  test_p09_sysfs_parser.cpp  test_p11_timer_wheel.cpp  test_p13_deb_parser.cpp  test_p16_netlink_ring.cpp  test_p18_dma_scatter.cpp  test_p27_mount_parser.cpp  test_p31_packed_sensor.cpp  test_p33_crc32.cpp  test_p34_bitfield_reg.cpp  test_p36_hex_dump.cpp  test_p37_argv_parse.cpp  test_p38_env_lookup.cpp  test_p39_lockfree_stack.cpp  test_p45_mempool.cpp  test_p46_buddy_alloc.cpp  test_p47_rb_tree_light.cpp  test_p50_snap_health.cpp
